[package]
name = "rust-raytracer"
version = "0.1.0"
authors = ["Pepijn Overbeeke <pepijn.overbeeke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
overload = "0.1.1"
rand = "0.8.4"
rand_distr = "0.4.1"
rayon = "1.5.1"
kdtree = "0.5.1"
